--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: required
 
 install: 
   - export PATH=$PATH:$HOME/.local/bin
+  - travis_retry pip install --upgrade pip
   - python --version
 
 services:
@@ -21,25 +22,30 @@ script:
 after_success:
  - docker --version
  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
- - mv target/itemviewerservice.war ../docker/
+ - mv target/iris.war ../docker/
  - cd $TRAVIS_BUILD_DIR
- - chmod ugo+x DeployScripts/code_deploy.sh
- - chmod ugo+x DeployScripts/deploy.sh
+ - chmod ugo+x DeployScripts/code_docker_deploy.sh
+ - chmod ugo+x DeployScripts/app_docker_deploy.sh
 
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ./DeployScripts/code_deploy.sh
+    script: ./DeployScripts/code_docker_deploy.sh
     on:
       all_branches: true
+ - provider: script
+    skip_cleanup: true
+    script: ./DeployScripts/app_docker_deploy.sh
+    on:
+        tags: true
   - provider: script
     skip_cleanup: true
-    script: ./DeployScripts/deploy.sh 
+    script: ./DeployScripts/app_docker_deploy.sh 
     on:
       branch: master
   - provider: script
     skip_cleanup: true
-    script: ./DeployScripts/deploy.sh
+    script: ./DeployScripts/app_docker_deploy.sh
     on:
       branch: dev
 
