item renderer version 3.2.0.Release

--- a/iris/pom.xml
+++ b/iris/pom.xml
@@ -8,7 +8,7 @@
 	<name>iris</name>
 
     <properties>
-		<tds-item-renderer.version>3.2.0</tds-item-renderer.version>
+		<tds-item-renderer.version>3.2.0.RELEASE</tds-item-renderer.version>
 		<tds-item-renderer-exclude.version>3.1.1.RELEASE</tds-item-renderer-exclude.version>
 	</properties>
 
