--- a/iris/pom.xml
+++ b/iris/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.opentestsystem.delivery</groupId>
 	<artifactId>iris</artifactId>
 	<packaging>war</packaging>
-	<version>3.2.0</version>
+	<version>3.2.0.RELEASE</version>
 	<name>iris</name>
 
     <properties>
