--- a/iris/pom.xml
+++ b/iris/pom.xml
@@ -4,11 +4,11 @@
 	<groupId>org.opentestsystem.delivery</groupId>
 	<artifactId>iris</artifactId>
 	<packaging>war</packaging>
-	<version>3.2.3.RELEASE</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<name>iris</name>
 
     <properties>
-		<tds-item-renderer.version>3.2.0.RELEASE</tds-item-renderer.version>
+		<tds-item-renderer.version>4.0.7</tds-item-renderer.version>
 		<tds-item-renderer-exclude.version>3.1.1.RELEASE</tds-item-renderer-exclude.version>
 	</properties>
 
@@ -20,18 +20,18 @@
 			<url>https://airdev.artifactoryonline.com/airdev/libs-releases-local</url>
 		</repository>
 	</repositories>
-	
+
 	<parent>
 		<groupId>org.opentestsystem.shared</groupId>
 		<artifactId>shared-master</artifactId>
-		<version>3.0.3</version>
+		<version>4.0.5</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.opentestsystem.delivery</groupId>
 			<artifactId>student-library</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.opentestsystem.delivery</groupId>
@@ -56,13 +56,13 @@
 		<dependency>
 			<groupId>org.opentestsystem.delivery</groupId>
 			<artifactId>spellcheck</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.opentestsystem.delivery</groupId>
 			<artifactId>student</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.opentestsystem.shared</groupId>
@@ -104,27 +104,27 @@
 		<dependency>
 			<groupId>org.opentestsystem.shared</groupId>
 			<artifactId>shared-web</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opentestsystem.shared</groupId>
 			<artifactId>shared-tr-api</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opentestsystem.shared</groupId>
 			<artifactId>shared-logging</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opentestsystem.shared</groupId>
 			<artifactId>shared-threading</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opentestsystem.shared</groupId>
 			<artifactId>shared-test</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opentestsystem.delivery</groupId>
@@ -180,7 +180,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<version>1.1.4.RELEASE</version>
+			<version>1.5.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -190,7 +190,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.2.1.RELEASE</version>
+			<version>4.3.10.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -204,13 +204,13 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.3.0</version>
+			<version>2.8.5</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.3.0</version>
+			<version>2.8.5</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-guava -->
 		<dependency>
